--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -4,32 +4,78 @@ $fz: 60px;
 //сокращение
 %tplborder {
   border-bottom: 10px dashed rgb(228, 16, 16);
+  // пример (@extend %tplborder;)
 } //шаблон
 @mixin fontz($fz, $c, $bc) {
   font-size: $fz;
   color: $c;
   background-color: $bc;
-} //миксы
-body{
-  min-width: 1124px;
 }
 
+@mixin mwh($m-w, $w, $m-h, $h) {
+  max-width: $m-w;
+  width: $w;
+  max-height: $m-h;
+  height: $h;
+}
+// пример (@include fontz(20px, red, green);)
+//миксы
+////////////////////////////////////////////
+///
+///
+body {
+  max-width: 1124px;
+  width: 100%;
+  margin: 0px auto;
+  font-family: "Roboto";
+}
+//header///////////////////////////////////////
+header {
+  @include mwh(1024px, 100%, 72px, 100%);
+  top: 0px;
+  position: fixed;
+}
 .header {
   &__body {
+    background-color: #ffffff;
+    margin-left: 81px;
+    margin-right: 87px;
+    display: flex;
+    justify-content: space-between;
+    box-shadow: 0 6px 4px -4px #d4dbe0;
   }
 
   &__logo {
+    margin: auto 0px auto 0px;
   }
 
   &__buttons {
+    display: flex;
   }
 }
 .item-header {
   &__button-entrance {
+    margin: auto;
+    width: 78px;
+    height: 40px;
+    background-color: #fff;
+    color: #000000;
+    border: 1px solid #e0e0e0;
+    border-radius: 10%;
+    font-weight: 600;
+    font-family: Roboto;
   }
 
   &__button-basket {
+    background-color: #fff;
+    margin-left: 16px;
+    width: 40px;
+    height: 72px;
   }
+}
+//main//////////////////////////////////////
+main {
+  margin-top: 72px;
 }
 .main {
   &__body {
