--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,55 @@ img {
 }
 
 /*!обнуление/////////////////////////////////*/
-
 body {
-  min-width: 1124px;
+  max-width: 1124px;
+  width: 100%;
+  margin: 0px auto;
+  font-family: "Roboto";
+}
+
+header {
+  max-width: 1024px;
+  width: 100%;
+  max-height: 72px;
+  height: 100%;
+  top: 0px;
+  position: fixed;
+}
+
+.header__body {
+  background-color: #ffffff;
+  margin-left: 81px;
+  margin-right: 87px;
+  display: flex;
+  justify-content: space-between;
+  box-shadow: 0 6px 4px -4px #d4dbe0;
+}
+.header__logo {
+  margin: auto 0px auto 0px;
+}
+.header__buttons {
+  display: flex;
+}
+
+.item-header__button-entrance {
+  margin: auto;
+  width: 78px;
+  height: 40px;
+  background-color: #fff;
+  color: #000000;
+  border: 1px solid #e0e0e0;
+  border-radius: 10%;
+  font-weight: 600;
+  font-family: Roboto;
+}
+.item-header__button-basket {
+  background-color: #fff;
+  margin-left: 16px;
+  width: 40px;
+  height: 72px;
+}
+
+main {
+  margin-top: 72px;
 }
