--- a/css/style.css
+++ b/css/style.css
@@ -85,12 +85,13 @@ body {
 }
 
 header {
-  max-width: 1024px;
+  max-width: 1124px;
   width: 100%;
   max-height: 72px;
   height: 100%;
   top: 0px;
   position: fixed;
+  z-index: 3;
 }
 
 .header__body {
@@ -116,8 +117,10 @@ header {
   color: #000000;
   border: 1px solid #e0e0e0;
   border-radius: 10%;
-  font-weight: 600;
-  font-family: Roboto;
+}
+.item-header__button-entrance p {
+  font-weight: bold;
+  font-family: "Roboto", sans-serif;
 }
 .item-header__button-basket {
   background-color: #fff;
@@ -134,6 +137,107 @@ header {
 }
 
 .main {
-  margin-top: 72px;
   flex: 1 1 auto;
+}
+
+.main__body {
+  padding-top: 72px;
+  padding-bottom: 80px;
+}
+.main__search-form {
+  margin: 56px auto 56px auto;
+  max-width: 962px;
+  width: 100%;
+  max-height: 24px;
+  height: 100%;
+  box-sizing: border-box;
+}
+.main__search-form form {
+  border-bottom: 1px solid #757575;
+  opacity: 0.3;
+}
+.main__search-form input {
+  max-width: 962px;
+  width: 100%;
+  max-height: 24px;
+  height: 100%;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  color: #626262;
+}
+.main__header {
+  margin: 0px auto 16px 81px;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 34px;
+  display: flex;
+  align-items: center;
+  color: #1d1d1d;
+}
+.main__cards {
+  margin: 0px 87px auto 81px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 16px;
+}
+.main__column {
+  max-width: 308px;
+  width: 100%;
+  max-height: 366px;
+  height: 100%;
+}
+.main__column:hover {
+  background: #f3efef;
+}
+
+.item-main__title {
+  display: flex;
+  align-items: center;
+  margin-top: 16px;
+  margin-bottom: 4px;
+}
+.item-main__title h5 {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  color: #1d1d1d;
+}
+.item-main__subtitle {
+  display: flex;
+  align-items: center;
+  margin-bottom: 4px;
+}
+.item-main__subtitle h6 {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+  color: #626262;
+}
+.item-main__time {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.item-main__time p {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 13px;
+  line-height: 21px;
+  color: #1d1d1d;
+}
+
+.item-about__icon {
+  max-width: 308px;
+  width: 100%;
+  max-height: 256px;
+  height: 100%;
 }
