--- a/css/style.css
+++ b/css/style.css
@@ -78,8 +78,6 @@ img {
 
 /*!обнуление/////////////////////////////////*/
 body {
-  max-width: 1124px;
-  width: 100%;
   margin: 0px auto;
   font-family: "Roboto";
 }
@@ -92,15 +90,15 @@ header {
   top: 0px;
   position: fixed;
   z-index: 3;
+  box-shadow: 0 6px 4px -4px #d4dbe0;
+  background-color: #ffffff;
 }
 
 .header__body {
-  background-color: #ffffff;
   margin-left: 81px;
   margin-right: 87px;
   display: flex;
   justify-content: space-between;
-  box-shadow: 0 6px 4px -4px #d4dbe0;
 }
 .header__logo {
   margin: auto 0px auto 0px;
@@ -130,6 +128,9 @@ header {
 }
 
 .wrapper {
+  max-width: 1124px;
+  width: 100%;
+  margin: 0px auto;
   min-height: 100%;
   overflow: hidden;
   display: flex;
