--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -32,8 +32,8 @@ $fz: 60px;
 ///
 ///
 body {
-  margin: 0px auto; 
-  font-family: "Roboto";
+  margin: 0px auto;
+  font-family: "Roboto", sans-serif;
 }
 //header///////////////////////////////////////
 header {
@@ -45,17 +45,23 @@ header {
   box-shadow: 0 6px 4px -4px #d4dbe0;
   background-color: #ffffff;
 }
-      //TODO сделать чтобы шапка была на 100% по браузеру
+//TODO сделать чтобы шапка была на 100% по браузеру
 .header {
   &__body {
     margin-left: 81px;
     margin-right: 87px;
     display: flex;
     justify-content: space-between;
+    @media (max-width: 769px) {
+      margin: 0px;
+    }
   }
 
   &__logo {
     margin: auto 0px auto 0px;
+    @media (max-width: 769px) {
+      padding-left: 8px;
+    }
   }
 
   &__buttons {
@@ -108,6 +114,9 @@ header {
     margin: 56px auto 56px auto;
     @include mwh(962px, 100%, 24px, 100%);
     box-sizing: border-box;
+    @media (max-width: 769px) {
+      padding: 0px 8px;
+    }
 
     form {
       border-bottom: 1px solid #757575;
@@ -132,6 +141,10 @@ header {
     display: flex;
     align-items: center;
     color: #1d1d1d;
+    @media (max-width: 769px) {
+      margin-left: 0px;
+      padding-left: 8px;
+    }
   }
 
   &__cards {
@@ -140,12 +153,22 @@ header {
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 16px;
+    @media (max-width: 769px) {
+      margin: 0px 0px 0px 0px;
+      padding: 0px 8px;
+    }
   }
 
   &__column {
     @include mwh(308px, 100%, 366px, 100%);
     &:hover {
       background: #f3efef;
+    }
+    @media (max-width: 769px) {
+      @include mwh(368px, 100%, 346px, 100%);
+      img {
+        @include mwh(368px, 100%, 256px, 100%);
+      }
     }
   }
 }
@@ -193,50 +216,88 @@ header {
     }
   }
 }
-.item-about {
-  &__icon {
-    @include mwh(308px, 100%, 256px, 100%);
-  }
-}
+
 .footer {
+  @include mwh(1124px, 100%, 552px, 100%);
+  background-color: rgb(101, 71, 71);
   &__body {
+    margin: 0px 81px 0px 87px;
+    background-color: #262626;
+
+    //????????????точно ли здесь надо установить d?
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
   }
 
   &__header {
+    margin-top: 51px;
+    margin-bottom: 41px;
   }
 
-  &__logo {
-  }
+  //&__logo {}
 
   &__row {
+    box-sizing: border-box;
+    border-top: 1px solid rgb(216, 197, 197);
+    border-bottom: 1px solid rgb(223, 203, 203);
   }
-
+  &__wrapper-columns {
+    @include mww(720px, 100%);
+    padding-top: 32px;
+    padding-bottom: 48px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
   &__column {
   }
 
   &__button {
+    padding-top: 40px;
+    padding-bottom: 40px;
+    box-sizing: border-box;
+    border-bottom: 1px solid rgb(223, 203, 203);
   }
 
   &__column-button {
+    display: flex;
+    justify-content: center;
+    column-gap: 40px;
   }
 
   &__row-help {
+    padding-top: 40px;
+    padding-bottom: 40px;
   }
 
   &__nav {
   }
 }
 .links-footer {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+
   &__language {
+    margin-bottom: 33px;
   }
 
   &__sending {
+    @include mwh(92px, 100%, 60px, 100%);
   }
 
   &__sending-logo {
+    padding-bottom: 17px;
+    a div {
+      display: inline-block;
+      color: #49a144;
+    }
   }
 
   &__sending-buttons {
+    display: flex;
+    justify-content: space-between;
   }
 
   &__facebook-button {
@@ -251,8 +312,26 @@ header {
 .nav-footer {
   &__links {
   }
+  &__link-padding-bottom {
+    &:not(:last-child) {
+      padding-bottom: 23px;
+    }
+  }
 
   &__link {
+    a {
+      font-weight: 400;
+      font-size: 13px;
+      line-height: 15px;
+      color: #ffffff;
+    }
+  }
+  &__links-bottom {
+    display: flex;
+    column-gap: 15%;
+    &__link div {
+      margin-bottom: 0px;
+    }
   }
 }
 .footer-button {
