--- a/css/style.css
+++ b/css/style.css
@@ -235,6 +235,20 @@ header {
     height: 100%;
   }
 }
+@media (max-width: 321px) {
+  .main__column {
+    max-width: 308px;
+    width: 100%;
+    max-height: 356px;
+    height: 100%;
+  }
+  .main__column img {
+    max-width: 308px;
+    width: 100%;
+    max-height: 246px;
+    height: 100%;
+  }
+}
 
 .item-main__title {
   display: flex;
@@ -278,11 +292,11 @@ header {
 }
 
 .footer {
-  max-width: 1124px;
+  min-width: 1124px;
   width: 100%;
-  max-height: 552px;
+  min-height: 552px;
   height: 100%;
-  background-color: rgb(101, 71, 71);
+  background-color: #262626;
 }
 .footer__body {
   margin: 0px 81px 0px 87px;
@@ -290,6 +304,12 @@ header {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
+}
+@media (max-width: 769px) {
+  .footer__body {
+    margin: 0;
+    padding: 0px 8px;
+  }
 }
 .footer__header {
   margin-top: 51px;
@@ -309,6 +329,12 @@ header {
   justify-content: space-between;
   align-items: flex-start;
 }
+@media (max-width: 321px) {
+  .footer__wrapper-columns {
+    flex-direction: column;
+    row-gap: 23px;
+  }
+}
 .footer__button {
   padding-top: 40px;
   padding-bottom: 40px;
@@ -320,6 +346,11 @@ header {
   justify-content: center;
   -moz-column-gap: 40px;
        column-gap: 40px;
+}
+@media (max-width: 321px) {
+  .footer__column-button {
+    justify-content: start;
+  }
 }
 .footer__row-help {
   padding-top: 40px;
@@ -366,4 +397,23 @@ header {
 }
 .nav-footer__links-bottom__link div {
   margin-bottom: 0px;
+}
+@media (max-width: 321px) {
+  .nav-footer__links-bottom {
+    flex-direction: column;
+    row-gap: 23px;
+  }
+}
+
+.footer-button__as img {
+  max-width: 120px;
+  width: 100%;
+  max-height: 40px;
+  height: 100%;
+}
+.footer-button__gp img {
+  max-width: 120px;
+  width: 100%;
+  max-height: 40px;
+  height: 100%;
 }
