--- a/css/style.css
+++ b/css/style.css
@@ -78,27 +78,51 @@ img {
 
 /*!обнуление/////////////////////////////////*/
 body {
-  margin: 0px auto;
   font-family: "Roboto", sans-serif;
 }
 
+.wrapper {
+  display: flex;
+  min-height: 100%;
+  overflow: hidden;
+  flex-direction: column;
+}
+
+.container {
+  box-sizing: content-box;
+  max-width: 956px;
+  margin: 0 auto;
+  padding: 0px 15px;
+}
+@media (max-width: 1124px) {
+  .container {
+    max-width: 970px;
+  }
+}
+@media (max-width: 992px) {
+  .container {
+    max-width: 750px;
+  }
+}
+@media (max-width: 769px) {
+  .container {
+    max-width: none;
+    padding: 0px 8px;
+  }
+}
+
 header {
-  max-width: 1124px;
   width: 100%;
-  max-height: 72px;
-  height: 100%;
   top: 0px;
   position: fixed;
   z-index: 3;
-  box-shadow: 0 6px 4px -4px #d4dbe0;
   background-color: #ffffff;
 }
 
 .header__body {
-  margin-left: 81px;
-  margin-right: 87px;
   display: flex;
   justify-content: space-between;
+  box-shadow: 0 6px 4px -4px #d4dbe0;
 }
 @media (max-width: 769px) {
   .header__body {
@@ -136,15 +160,11 @@ header {
   width: 40px;
   height: 72px;
 }
-
-.wrapper {
-  max-width: 1124px;
+.item-header__button-basket img {
+  max-width: 40px;
   width: 100%;
-  margin: 0px auto;
-  min-height: 100%;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
+  max-height: 72px;
+  height: 100%;
 }
 
 .main {
@@ -183,7 +203,7 @@ header {
   color: #626262;
 }
 .main__header {
-  margin: 0px auto 16px 81px;
+  margin: 0px auto 16px 0px;
   font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -200,7 +220,6 @@ header {
   }
 }
 .main__cards {
-  margin: 0px 87px auto 81px;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -209,7 +228,6 @@ header {
 @media (max-width: 769px) {
   .main__cards {
     margin: 0px 0px 0px 0px;
-    padding: 0px 8px;
   }
 }
 .main__column {
@@ -292,14 +310,9 @@ header {
 }
 
 .footer {
-  min-width: 1124px;
-  width: 100%;
-  min-height: 552px;
-  height: 100%;
   background-color: #262626;
 }
 .footer__body {
-  margin: 0px 81px 0px 87px;
   background-color: #262626;
   display: flex;
   justify-content: space-between;
@@ -307,6 +320,16 @@ header {
 }
 @media (max-width: 769px) {
   .footer__body {
+    max-width: 768px;
+    width: 100%;
+    margin: 0;
+    padding: 0px 8px;
+  }
+}
+@media (max-width: 441px) {
+  .footer__body {
+    max-width: 420px;
+    width: 100%;
     margin: 0;
     padding: 0px 8px;
   }
@@ -329,7 +352,7 @@ header {
   justify-content: space-between;
   align-items: flex-start;
 }
-@media (max-width: 321px) {
+@media (max-width: 441px) {
   .footer__wrapper-columns {
     flex-direction: column;
     row-gap: 23px;
@@ -347,9 +370,9 @@ header {
   -moz-column-gap: 40px;
        column-gap: 40px;
 }
-@media (max-width: 321px) {
+@media (max-width: 441px) {
   .footer__column-button {
-    justify-content: start;
+    justify-content: center;
   }
 }
 .footer__row-help {
@@ -398,7 +421,7 @@ header {
 .nav-footer__links-bottom__link div {
   margin-bottom: 0px;
 }
-@media (max-width: 321px) {
+@media (max-width: 441px) {
   .nav-footer__links-bottom {
     flex-direction: column;
     row-gap: 23px;
