--- a/css/style2.css
+++ b/css/style2.css
@@ -77,3 +77,40 @@ img {
 }
 
 /*!обнуление/////////////////////////////////*/
+body {
+  font-family: "Roboto", sans-serif;
+}
+
+.wrapper {
+  display: flex;
+  min-height: 100%;
+  overflow: hidden;
+  flex-direction: column;
+}
+
+.container {
+  box-sizing: content-box;
+  max-width: 956px;
+  margin: 0 auto;
+  padding: 0px 15px;
+}
+@media (max-width: 1124px) {
+  .container {
+    max-width: 970px;
+  }
+}
+@media (max-width: 992px) {
+  .container {
+    max-width: 750px;
+  }
+}
+@media (max-width: 769px) {
+  .container {
+    max-width: none;
+    padding: 0px 8px;
+  }
+}
+
+.main {
+  flex: 1 1 auto;
+}
