--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -35,16 +35,18 @@ $fz: 60px;
 // пример (@include fontz(20px, red, green);)
 //миксы
 ////////////////////////////////////////////
-///
-///
+html,
+body {
+  height: 100%;
+}
 body {
   //margin: 0px auto;
   font-family: "Roboto", sans-serif;
 }
 .wrapper {
   //для того чтобы ограичить контентную зону;
-  display: flex; //для того чтобы прижать footer вниз
   min-height: 100%; //для того чтобы прижать footer вниз
+  display: flex; //для того чтобы прижать footer вниз
   overflow: hidden; //для того чтобы прижать footer вниз
   flex-direction: column; //для того чтобы прижать footer вниз
 }
