--- a/css/style.css
+++ b/css/style.css
@@ -77,13 +77,18 @@ img {
 }
 
 /*!обнуление/////////////////////////////////*/
+html,
+body {
+  height: 100%;
+}
+
 body {
   font-family: "Roboto", sans-serif;
 }
 
 .wrapper {
-  display: flex;
   min-height: 100%;
+  display: flex;
   overflow: hidden;
   flex-direction: column;
 }
