--- a/css/style2.css
+++ b/css/style2.css
@@ -77,6 +77,11 @@ img {
 }
 
 /*!обнуление/////////////////////////////////*/
+html,
+body {
+  height: 100%;
+}
+
 body {
   font-family: "Roboto", sans-serif;
 }
@@ -113,4 +118,12 @@ body {
 
 .main {
   flex: 1 1 auto;
+}
+.main__section-one {
+  max-width: 1124px;
+  width: 100%;
+  max-height: 364px;
+  height: 100%;
+  background-image: url(img/img2/main__section-one/photo.png);
+  width: 100%;
 }
