--- a/css/menu.css
+++ b/css/menu.css
@@ -119,11 +119,18 @@ body {
 .main {
   flex: 1 1 auto;
 }
-.main__section-one {
-  max-width: 1124px;
-  width: 100%;
-  max-height: 364px;
+.section-two {
+  max-height: 80px;
   height: 100%;
-  background-image: url(img/img2/main__section-one/photo.png);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -moz-column-gap: 40px;
+       column-gap: 40px;
+}
+.cards-item__icon {
+  max-width: 170px;
   width: 100%;
+  max-height: 160px;
+  height: 100%;
 }
