--- a/#source/scss/menu.scss
+++ b/#source/scss/menu.scss
@@ -75,10 +75,14 @@ body {
 
   &__section-one {
    
-    background-color: rgb(209, 145, 145);
-    padding: 80px 0px;
+    //@include minwh(956px, 100%, 364px, 100%);
   }
-
+  &__section-bacground {
+    @include minwh(956px, 100%, 364px, 100%);
+    background-image: url("../img/img2/main.one/photo.png");
+    padding: 80px 0px;
+    //background-color: rgb(208, 169, 169);
+  }
   &__section-two {
     @include mhh(80px, 100%);
     padding: 31px 0px;
@@ -148,40 +152,107 @@ body {
 }
 .section-two {
   &__nav-item {
+    //???????????????????????????????????????????????
+    & {
+      color: #626262;
+    }
+    &:hover {
+      color: #327430;
+    }
+    &:visited {
+      color: #d41919;
+    }
+    //???????????????????????????????????????????????
+
     text-decoration: none;
     font-family: "Roboto" sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 19px;
-    color: #626262;
   }
 }
 .section-three {
   &__header {
+    padding-top: 56px;
+    padding-bottom: 32px;
+    h4 {
+      font-family: "Roboto", sans-serif;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 22px;
+      line-height: 34px;
+      color: #1d1d1d;
+    }
   }
 
   &__cards {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    row-gap: 49px;
+    column-gap: 16px;
   }
 }
 .cards {
   &__column {
+    @include mwh(470px, 100%, 160px, 100%);
   }
 
   &__item {
+    display: flex;
+    justify-content: space-between;
+    &:hover {
+      background-color: rgb(232, 218, 218);
+    }
+    // align-items: flex-start;
+    height: 100%;
   }
 }
+
 .cards-item {
   &__icon {
-    @include mwh(170px, 100%, 160px, 100%);
+    order: 1;
+    img {
+      @include mwh(170px, 100%, 160px, 100%);
+    }
+  }
+
+  &__flex-one {
+  }
+
+  &__flex-two {
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; //TODO ////////////////////////
+    //height: 100%;
   }
 
   &__title {
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #1d1d1d;
   }
 
   &__subtitle {
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 21px;
+    color: #626262;
   }
 
   &__pricee {
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 21px;
+    color: #1d1d1d;
   }
 }
