--- a/css/menu.css
+++ b/css/menu.css
@@ -119,8 +119,12 @@ body {
 .main {
   flex: 1 1 auto;
 }
-.main__section-one {
-  background-color: rgb(209, 145, 145);
+.main__section-bacground {
+  min-width: 956px;
+  width: 100%;
+  min-height: 364px;
+  height: 100%;
+  background-image: url("../img/img2/main.one/photo.png");
   padding: 80px 0px;
 }
 .main__section-two {
@@ -190,12 +194,89 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 19px;
+}
+.section-two__nav-item {
   color: #626262;
+}
+.section-two__nav-item:hover {
+  color: #327430;
+}
+.section-two__nav-item:visited {
+  color: #d41919;
+}
+
+.section-three__header {
+  padding-top: 56px;
+  padding-bottom: 32px;
+}
+.section-three__header h4 {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 34px;
+  color: #1d1d1d;
+}
+.section-three__cards {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  row-gap: 49px;
+  -moz-column-gap: 16px;
+       column-gap: 16px;
+}
+
+.cards__column {
+  max-width: 470px;
+  width: 100%;
+  max-height: 160px;
+  height: 100%;
+}
+.cards__item {
+  display: flex;
+  justify-content: space-between;
+  height: 100%;
+}
+.cards__item:hover {
+  background-color: rgb(232, 218, 218);
 }
 
 .cards-item__icon {
+  order: 1;
+}
+.cards-item__icon img {
   max-width: 170px;
   width: 100%;
   max-height: 160px;
   height: 100%;
+}
+.cards-item__flex-two {
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.cards-item__title {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #1d1d1d;
+}
+.cards-item__subtitle {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 21px;
+  color: #626262;
+}
+.cards-item__pricee {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 21px;
+  color: #1d1d1d;
 }
