--- a/#source/scss/menu.scss
+++ b/#source/scss/menu.scss
@@ -32,15 +32,20 @@ $fz: 60px;
   max-height: $m-h;
   height: $h;
 }
-// пример (@include fontz(20px, red, green);)
-//миксы
+// пример (@include fontz(20px, red, green);)  миксы
+@font-face {
+  font-family: "Roboto-Regular"; /* Имя шрифта */
+  src: url(fonts/Roboto-Regular.ttf) format(truetype); /* Путь к файлу со шрифтом */
+}
+
+////////////////////////////////////////
 html,
 body {
   height: 100%;
 }
 body {
   //margin: 0px auto;
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto-Regular", sans-serif;
 }
 .wrapper {
   //для того чтобы ограичить контентную зону;
@@ -50,7 +55,8 @@ body {
   flex-direction: column; //для того чтобы прижать footer вниз
 }
 .container {
-  box-sizing: content-box;
+  //для того чтобы ограичить контентную зону;
+  // box-sizing: content-box;
   max-width: 956px;
   margin: 0 auto;
   padding: 0px 15px;
@@ -71,31 +77,30 @@ body {
   flex: 1 1 auto; //для того чтобы прижать footer вниз
 
   &__body {
+    // margin: 0 auto;
   }
 
   &__section-one {
-   
+    @include mwh(1124px, 100%, 364px, 100%);
+    margin: 0 auto;
     //@include minwh(956px, 100%, 364px, 100%);
   }
   &__section-bacground {
-    @include minwh(956px, 100%, 364px, 100%);
+    @include mwh(1124px, 100%, 364px, 100%);
     background-image: url("../img/img2/main.one/photo.png");
     padding: 80px 0px;
     //background-color: rgb(208, 169, 169);
   }
   &__section-two {
     @include mhh(80px, 100%);
-    padding: 31px 0px;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    column-gap: 40px;
   }
 
   &__section-three {
   }
 }
-
+.container-section-bacground {
+  @include mwh(956px, 100%, 364px, 100%);
+}
 .section-one {
   &__item {
     background-color: rgb(255, 255, 255);
@@ -110,7 +115,7 @@ body {
   &__title {
     padding-bottom: 62px;
     h2 {
-      font-family: "Roboto";
+      font-family: "Roboto-Regular";
       font-style: normal;
       font-weight: 400;
       font-size: 36px;
@@ -125,7 +130,7 @@ body {
   }
   &__subtitle {
     h6 {
-      font-family: "Roboto", sans-serif;
+      font-family: "Roboto-Regular", sans-serif;
       font-style: normal;
       font-weight: 400;
       font-size: 14px;
@@ -140,7 +145,7 @@ body {
       border-radius: 100px;
       padding: 8px 16px;
       p {
-        font-family: "Roboto", sans-serif;
+        font-family: "Roboto-Regular", sans-serif;
         font-style: normal;
         font-weight: 400;
         font-size: 13px;
@@ -150,7 +155,16 @@ body {
     }
   }
 }
+
 .section-two {
+  &__nav {
+    padding: 31px 0px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    column-gap: 40px;
+  }
+
   &__nav-item {
     //???????????????????????????????????????????????
     & {
@@ -159,13 +173,11 @@ body {
     &:hover {
       color: #327430;
     }
-    &:visited {
-      color: #d41919;
-    }
+    //&:visited {color: #d41919; }
     //???????????????????????????????????????????????
 
     text-decoration: none;
-    font-family: "Roboto" sans-serif;
+    font-family: "Roboto-Regular" sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -177,7 +189,7 @@ body {
     padding-top: 56px;
     padding-bottom: 32px;
     h4 {
-      font-family: "Roboto", sans-serif;
+      font-family: "Roboto-Regular", sans-serif;
       font-style: normal;
       font-weight: 400;
       font-size: 22px;
@@ -230,29 +242,35 @@ body {
   }
 
   &__title {
-    font-family: "Roboto", sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    color: #1d1d1d;
+    h5 {
+      font-family: "Roboto-Regular", sans-serif;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 24px;
+      color: #1d1d1d;
+    }
   }
 
   &__subtitle {
-    font-family: "Roboto", sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 13px;
-    line-height: 21px;
-    color: #626262;
+    h6 {
+      font-family: "Roboto-Regular", sans-serif;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 13px;
+      line-height: 21px;
+      color: #626262;
+    }
   }
 
   &__pricee {
-    font-family: "Roboto", sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 15px;
-    line-height: 21px;
-    color: #1d1d1d;
+    p {
+      font-family: "Roboto-Regular", sans-serif;
+      font-style: normal;
+      font-weight: 600;
+      font-size: 15px;
+      line-height: 21px;
+      color: #1d1d1d;
+    }
   }
 }
