--- a/#source/scss/menu.scss
+++ b/#source/scss/menu.scss
@@ -234,6 +234,8 @@ body {
   }
 
   &__flex-two {
+    @include mww(300px, 100%);
+
     padding: 16px;
     display: flex;
     flex-direction: column;
@@ -241,7 +243,10 @@ body {
     //height: 100%;
   }
 
-  &__title {
+  &__title-subtitle {
+    //@include mww(300px, 100%);
+    word-wrap: break-word;
+    // overflow-x: hidden;
     h5 {
       font-family: "Roboto-Regular", sans-serif;
       font-style: normal;
@@ -249,10 +254,8 @@ body {
       font-size: 16px;
       line-height: 24px;
       color: #1d1d1d;
+      padding-bottom: 4px;
     }
-  }
-
-  &__subtitle {
     h6 {
       font-family: "Roboto-Regular", sans-serif;
       font-style: normal;
