--- a/css/menu.css
+++ b/css/menu.css
@@ -267,20 +267,26 @@ body {
   height: 100%;
 }
 .cards-item__flex-two {
+  max-width: 300px;
+  width: 100%;
   padding: 16px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
-.cards-item__title h5 {
+.cards-item__title-subtitle {
+  word-wrap: break-word;
+}
+.cards-item__title-subtitle h5 {
   font-family: "Roboto-Regular", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
   color: #1d1d1d;
+  padding-bottom: 4px;
 }
-.cards-item__subtitle h6 {
+.cards-item__title-subtitle h6 {
   font-family: "Roboto-Regular", sans-serif;
   font-style: normal;
   font-weight: 400;
