started to do adaptiv

--- a/#source/scss/menu.scss
+++ b/#source/scss/menu.scss
@@ -73,6 +73,7 @@ body {
 }
 ////////////////////////////////////////////
 
+///////////////////////////////////////////////////
 .main {
   flex: 1 1 auto; //для того чтобы прижать footer вниз
 
