--- a/css/menu.css
+++ b/css/menu.css
@@ -122,6 +122,11 @@ body {
 .main {
   flex: 1 1 auto;
 }
+@media (max-width: 440px) {
+  .main__body {
+    padding-bottom: 40px;
+  }
+}
 .main__section-one {
   max-width: 1124px;
   width: 100%;
@@ -241,12 +246,30 @@ body {
   -moz-column-gap: 16px;
        column-gap: 16px;
 }
+@media (max-width: 769px) {
+  .section-three__cards {
+    row-gap: 32px;
+  }
+}
+@media (max-width: 440px) {
+  .section-three__cards {
+    row-gap: 16px;
+  }
+}
 
 .cards__column {
   max-width: 470px;
   width: 100%;
   max-height: 160px;
   height: 100%;
+}
+@media (max-width: 769px) {
+  .cards__column {
+    max-width: 752px;
+    width: 100%;
+    max-height: 160px;
+    height: 100%;
+  }
 }
 .cards__item {
   display: flex;
@@ -260,11 +283,21 @@ body {
 .cards-item__icon {
   order: 1;
 }
-.cards-item__icon img {
-  max-width: 170px;
-  width: 100%;
-  max-height: 160px;
-  height: 100%;
+.cards-item__flex-one img {
+  width: 170px;
+  height: 160px;
+}
+@media (max-width: 769px) {
+  .cards-item__flex-one img {
+    width: 200px;
+    height: 160px;
+  }
+}
+@media (max-width: 440px) {
+  .cards-item__flex-one img {
+    width: 102px;
+    height: 102px;
+  }
 }
 .cards-item__flex-two {
   max-width: 300px;
@@ -273,6 +306,11 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+@media (max-width: 440px) {
+  .cards-item__flex-two {
+    padding: 0px;
+  }
 }
 .cards-item__title-subtitle {
   word-wrap: break-word;
