--- a/#source/scss/menu.scss
+++ b/#source/scss/menu.scss
@@ -78,7 +78,9 @@ body {
   flex: 1 1 auto; //для того чтобы прижать footer вниз
 
   &__body {
-    // margin: 0 auto;
+    @media (max-width: 440px) {
+      padding-bottom: 40px;
+    }
   }
 
   &__section-one {
@@ -88,6 +90,7 @@ body {
   }
   &__section-bacground {
     @include mwh(1124px, 100%, 364px, 100%);
+    // background-color: rgb(179, 55, 55);
     background-image: url("../img/img2/main.one/photo.png");
     padding: 80px 0px;
     //background-color: rgb(208, 169, 169);
@@ -205,11 +208,20 @@ body {
     flex-wrap: wrap;
     row-gap: 49px;
     column-gap: 16px;
+    @media (max-width: 769px) {
+      row-gap: 32px;
+    }
+    @media (max-width: 440px) {
+      row-gap: 16px;
+    }
   }
 }
 .cards {
   &__column {
     @include mwh(470px, 100%, 160px, 100%);
+    @media (max-width: 769px) {
+      @include mwh(752px, 100%, 160px, 100%);
+    }
   }
 
   &__item {
@@ -226,22 +238,32 @@ body {
 .cards-item {
   &__icon {
     order: 1;
-    img {
-      @include mwh(170px, 100%, 160px, 100%);
-    }
   }
 
   &__flex-one {
+    img {
+      width: 170px;
+      height: 160px;
+      @media (max-width: 769px) {
+        width: 200px;
+        height: 160px;
+      }
+      @media (max-width: 440px) {
+        width: 102px;
+        height: 102px;
+      }
+    }
   }
 
   &__flex-two {
     @include mww(300px, 100%);
-
     padding: 16px;
     display: flex;
     flex-direction: column;
     justify-content: space-between; //TODO ////////////////////////
-    //height: 100%;
+    @media (max-width: 440px) {
+      padding: 0px;
+    }
   }
 
   &__title-subtitle {
