--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,11 @@ header {
   padding-top: 72px;
   padding-bottom: 80px;
 }
+@media (max-width: 769px) {
+  .main__body {
+    padding-bottom: 48px;
+  }
+}
 .main__search-form {
   margin: 56px auto 56px auto;
   max-width: 962px;
@@ -235,6 +240,11 @@ header {
     margin: 0px 0px 0px 0px;
   }
 }
+@media (max-width: 440px) {
+  .main__cards {
+    justify-content: center;
+  }
+}
 .main__column {
   max-width: 308px;
   width: 100%;
@@ -252,7 +262,7 @@ header {
     height: 100%;
   }
   .main__column img {
-    max-width: 368px;
+    max-width: 308px;
     width: 100%;
     max-height: 256px;
     height: 100%;
@@ -312,6 +322,12 @@ header {
   font-size: 13px;
   line-height: 21px;
   color: #1d1d1d;
+}
+.item-main__icon img {
+  max-width: 368px;
+  width: 100%;
+  max-height: 256px;
+  height: 100%;
 }
 
 .footer {
