--- a/#source/scss/menu.scss
+++ b/#source/scss/menu.scss
@@ -93,7 +93,12 @@ body {
     // background-color: rgb(179, 55, 55);
     background-image: url("../img/img2/main.one/photo.png");
     padding: 80px 0px;
-    //background-color: rgb(208, 169, 169);
+    @media (max-width: 440px) {
+      padding: 0px;
+      width: 100%;
+      max-height: 255px;
+      height: 100%; //todoooooooooooooooooooooooooo
+    }
   }
   &__section-two {
     @include mhh(80px, 100%);
@@ -268,8 +273,12 @@ body {
 
   &__title-subtitle {
     //@include mww(300px, 100%);
-    word-wrap: break-word;
+    //word-wrap: break-word;
     // overflow-x: hidden;
+    //overflow: hidden;
+    // text-overflow: ellipsis;
+    //white-space: nowrap; /* Запрещаем перенос строк */
+
     h5 {
       font-family: "Roboto-Regular", sans-serif;
       font-style: normal;
