--- a/#source/scss/menu.scss
+++ b/#source/scss/menu.scss
@@ -96,8 +96,8 @@ body {
     @media (max-width: 440px) {
       padding: 0px;
       width: 100%;
-      max-height: 255px;
-      height: 100%; //todoooooooooooooooooooooooooo
+      min-height: 255px;
+      //todoooooooooooooooooooooooooo
     }
   }
   &__section-two {
@@ -265,21 +265,25 @@ body {
     padding: 16px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between; //TODO ////////////////////////
+    justify-content: space-between;
+
+    overflow: hidden;
+
     @media (max-width: 440px) {
       padding: 0px;
     }
   }
-
   &__title-subtitle {
-    //@include mww(300px, 100%);
     //word-wrap: break-word;
     // overflow-x: hidden;
     //overflow: hidden;
     // text-overflow: ellipsis;
-    //white-space: nowrap; /* Запрещаем перенос строк */
+    //white-space: nowrap;
 
     h5 {
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
       font-family: "Roboto-Regular", sans-serif;
       font-style: normal;
       font-weight: 400;
