--- a/#source/scss/menu.scss
+++ b/#source/scss/menu.scss
@@ -313,3 +313,19 @@ body {
     }
   }
 }
+.button-container {
+  position: fixed;
+  right: 3%;
+  bottom: 3%;
+  //@include mwh(80px, 100%, 80px, 100%);
+  &__btn {
+    background-color: #59bd5a;
+    width: 80px;
+    height: 80px;
+    @media (max-width: 440px) {
+      width: 64px;
+      height: 64px;
+    }
+    //@include mwh(80px, 100%, 80px, 100%);
+  }
+}
