--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@ header {
 }
 @media (max-width: 769px) {
   .main__body {
-    padding-bottom: 8px;
+    padding-bottom: 48px;
   }
 }
 .main__search-form {
@@ -460,4 +460,21 @@ header {
   width: 100%;
   max-height: 40px;
   height: 100%;
+}
+
+.button-container {
+  position: fixed;
+  right: 3%;
+  bottom: 3%;
+}
+.button-container__btn {
+  background-color: #59bd5a;
+  width: 80px;
+  height: 80px;
+}
+@media (max-width: 440px) {
+  .button-container__btn {
+    width: 64px;
+    height: 64px;
+  }
 }
